# estudo_preditivo

./: .gitignore  pyproject.toml  requirements.txt
TOTVS/pipeline/: Extract.py
catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: generator.py  gerador.py
data/input/: dados.json
src/estudo_preditivo/: __init__.py  transform_csv.py
tests/: teste_01.py
tests_machine_learning/: 01_train_Random_Forest.py  02_train_LightGBM.py  03_train_Logistic_Regression.py  03_train_XGBoost.py  04_train_CatBoost.py
tests_machine_learning/test_script_github/: teste_preditivo_github.py
