[project]
name = "estudo-preditivo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "imblearn (>=0.0,<0.1)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=6.0.1,<7.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "estudo_preditivo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."